[gd_scene load_steps=6 format=2]

[ext_resource path="res://menu/editor_menu/ui/ui.gd" type="Script" id=1]
[ext_resource path="res://addons/SafeArea/SafeArea.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/montserrat_eb_14.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/icons/back.png" type="Texture" id=4]
[ext_resource path="res://menu/editor_menu/ui/new_map_dialog/new_map_dialog.tscn" type="PackedScene" id=5]

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="SafeArea" type="MarginContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/SafeArea"]
margin_right = 600.0
margin_bottom = 1024.0

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer"]
margin_right = 600.0
margin_bottom = 80.0

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer3"]
margin_right = 4.0
margin_bottom = 80.0
rect_min_size = Vector2( 4, 0 )

[node name="back" type="Button" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer3"]
margin_left = 8.0
margin_right = 108.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 3 )
icon = ExtResource( 4 )
flat = true
expand_icon = true

[node name="Label" type="Label" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer3"]
margin_left = 112.0
margin_top = 29.0
margin_right = 484.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Map Editor"
align = 1
valign = 1

[node name="MarginContainer7" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer3"]
margin_left = 488.0
margin_right = 588.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 0 )

[node name="MarginContainer6" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer3"]
margin_left = 592.0
margin_right = 600.0
margin_bottom = 80.0
rect_min_size = Vector2( 8, 0 )

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer"]
margin_top = 84.0
margin_right = 600.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 8 )

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer"]
margin_top = 96.0
margin_right = 600.0
margin_bottom = 176.0

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer2"]
margin_right = 4.0
margin_bottom = 80.0
rect_min_size = Vector2( 4, 0 )

[node name="search_map" type="LineEdit" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer2"]
margin_left = 8.0
margin_right = 452.0
margin_bottom = 80.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
align = 1
placeholder_text = "Search Map"

[node name="MarginContainer5" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer2"]
margin_left = 456.0
margin_right = 464.0
margin_bottom = 80.0
rect_min_size = Vector2( 8, 0 )

[node name="new_map" type="Button" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer2"]
margin_left = 468.0
margin_right = 588.0
margin_bottom = 80.0
rect_min_size = Vector2( 120, 80 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "New"

[node name="MarginContainer6" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer2"]
margin_left = 592.0
margin_right = 600.0
margin_bottom = 80.0
rect_min_size = Vector2( 8, 0 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer"]
margin_top = 180.0
margin_right = 600.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer"]
margin_top = 192.0
margin_right = 600.0
margin_bottom = 1024.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer"]
margin_right = 8.0
margin_bottom = 832.0
rect_min_size = Vector2( 8, 0 )

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 588.0
margin_bottom = 832.0
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="map_list" type="VBoxContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer/ScrollContainer"]
margin_right = 576.0
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer"]
margin_left = 592.0
margin_right = 600.0
margin_bottom = 832.0
rect_min_size = Vector2( 8, 0 )

[node name="new_map_dialog" parent="CanvasLayer/Control" instance=ExtResource( 5 )]
visible = false

[connection signal="pressed" from="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer3/back" to="." method="_on_back_pressed"]
[connection signal="text_changed" from="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer2/search_map" to="." method="_on_search_map_text_changed"]
[connection signal="pressed" from="CanvasLayer/Control/SafeArea/VBoxContainer/HBoxContainer2/new_map" to="." method="_on_new_map_pressed"]
[connection signal="create" from="CanvasLayer/Control/new_map_dialog" to="." method="_on_new_map_dialog_create"]
